# fairness-and-explainability

./: EDA.ipynb  README.md  decision_tree  pyproject.toml  requirements.txt
Blackbox/: main.ipynb
Blackbox/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
Blackbox/catboost_info/learn/: events.out.tfevents
Blackbox/catboost_info/test/: events.out.tfevents
Blackbox/catboost_info/tmp/: cat_feature_index.8dab613a-4a8e6bab-d9b67c0e-6a775d57.tmp  cat_feature_index.9793e875-12f220e5-499bc09a-982530bd.tmp  cat_feature_index.9d3689ec-db7e479d-80777bd1-2b57488b.tmp
Dataset/: df_processed.csv
EDA/: EDA.ipynb  main.ipynb
FPDP/: main.ipynb
Models/: blackbox_model.pkl  surrogate_model.pkl  whitebox_model.pkl
Permutation/: permutation_bb.ipynb  permutation_wb.ipynb
Shap values/: main.ipynb
Step 1 - EDA/: main.ipynb
Step 2 - Blackbox/: main.ipynb
Step 2 - Blackbox/catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
Step 2 - Blackbox/catboost_info/learn/: events.out.tfevents
Step 2 - Blackbox/catboost_info/test/: events.out.tfevents
Step 3 - Whitebox model/: main.ipynb
Step 4 & 5 - Global Interpretability/: main.ipynb
Step 4 & 5 - Global Interpretability/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
Step 4 - Global Interpretability/: main.ipynb
Step 6 - Local Interpretability/: main.ipynb
Step 7 - Permutation/: permutation_bb.ipynb
Step 8 - Fairness/: main.ipynb
Whitebox/: main.ipynb
(+3 files in other folders)
